common-applications/test-environment/gitea-repo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: gitea-repo-sh
  name: gitea-repo-sh
