common-applications/test-environment/gitea-repo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-repo-sh
  namespace: gitea-repo-sh
spec:
  ports:
  - name: https-port
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: gitea-repo-sh
  sessionAffinity: None
  type: ClusterIP
