common-applications/test-environment/gitea-repo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
  name: gitea-repo-ingress
  namespace: gitea-repo-sh
spec:
  tls:
    - hosts:
      - giteash.test.osinfra.cn
      secretName: gitea-repo-lts
  rules:
    - host: giteash.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: gitea-repo
            servicePort: 3000
          path: /
