common-applications/test-environment/gitea-repo/networkpolicy.yaml
kind: NetworkPolicy
metadata:
  name: gitea-repo-sh-policy-01
  namespace: gitea-repo-sh
spec:
  podSelector:
    matchLabels:
      app: gitea-repo-sh
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
      from:
        - podSelector:
            matchLabels:
              app: merlin-website
          namespaceSelector:
            matchLabels:
              project: merlin-02
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: gitea-repo-sh-policy-02
  namespace: gitea-repo-sh
spec:
  podSelector:
    matchLabels:
      app: gitea-repo-sh
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
      from:
        - podSelector:
            matchLabels:
              app: server
          namespaceSelector:
            matchLabels:
              project: merlin-02
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: gitea-repo-sh-policy-03
  namespace: gitea-repo-sh
spec:
  podSelector:
    matchLabels:
      app: gitea-repo-sh
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
      from:
        - podSelector:
            matchLabels:
              app: git-access
          namespaceSelector:
            matchLabels:
              project: merlin-02
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: gitea-repo-sh-policy-04
  namespace: gitea-repo-sh
spec:
  podSelector:
    matchLabels:
      app: gitea-repo-sh
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
      from:
        - podSelector:
            matchLabels:
              app: label
          namespaceSelector:
            matchLabels:
              project: merlin-02
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1
